<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_cube" android:orderInCategory="2" android:title="@string/tvCube" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/action_cylindar" android:title="@string/tvCylindar" android:orderInCategory="3" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/action_deleteall" android:title="@string/tvDeleteAll" android:orderInCategory="7" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/action_pyramid" android:title="@string/tvPyramid" android:showAsAction="ifRoom"></item>
    <item android:id="@+id/action_delete" android:title="@string/tvDelete" android:showAsAction="always" android:orderInCategory="8"></item>
    <item android:id="@+id/action_trans" android:title="@string/tvTranslate" android:orderInCategory="5" android:showAsAction="always"></item>
    <item android:id="@+id/action_rot" android:title="@string/tvRotate" android:orderInCategory="6" android:showAsAction="always"></item>

</menu>
